--- a/index.html
+++ b/index.html
@@ -1,22 +1,86 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<title>The Best Movie That I've Seen</title>
+    <title>The Best Movie That I've Seen</title>
+    <!-- styles go from more specific to less specific so this order may not be the best -->
+    <style>
+        header {
+            background-color: rgb(18, 18, 18);
+            text-align: center;
+            border-radius: 25px;
+            padding: 20px;
+        }
+
+        footer {
+            color: #e2dfdf;
+            background-color: rgb(18, 18, 18);
+            text-align: right;
+            border-radius: 25px;
+            padding: 15px;
+        }
+
+        main {
+            background-color: rgb(23, 24, 24);
+            border-radius: 25px;
+            padding: 20px;
+        }
+
+        body {
+            background-color: rgb(176, 92, 255);
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        h1 {
+            color: #e2dfdf;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        h2 {
+            color: rgb(176, 92, 255);
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        p {
+            color: rgb(191, 191, 254);
+            text-indent: 50px;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-<h1>The Best Movie That I've Seen</h1>
+        <h1>The Best Movie That I've Seen</h1>
     </header>
+    <br>
+    <main>
+        <h2>Spider-Man: Across the Spider-Verse</h2>
 
-    <body>
-<h2>Spider-Man: Across the Spider-Verse</h2>
+        <img src="https://m.media-amazon.com/images/I/919p74MDUEL._AC_UF1000,1000_QL80_.jpg" height="300px">
 
-<p>The best movie I've seen recently <i>has</i> to be Spider-Man: Across the Spider-Verse. This movie was the sequel to Spider-Man: Into the Spider-verse, another excellent film. This animated film merges 3D and 2D animation through new </p>
-    </body>
+        <p>The best movie I've seen recently <i>has</i> to be Spider-Man: Across the Spider-Verse. This movie was the
+            sequel to Spider-Man: Into the Spider-verse, another excellent film. Thee film follows the life of Miles
+            Morales, the spider-man of his universe, as he deals with the separation of him and his other spider-people
+            friends. The movie explores his desire to be able to jump through dimensions to meet with his friends but
+            ultimately culminates in how he wishes to escape the "canon" fates of spider-people. Miguel O'Hara, the
+            leader of the Interdimensional Spider Coalition and primary spearheader of the "following the canon"
+            ideology becomes a huge obstacle in Miles' plans for his future.</p>
 
+        <p>As someone that is very interested in art, beyond just the story i found teh visuals of the movie to be
+            mesmerizing. Creating a world in which hundreds of different comic characters, all in varying styles, can
+            coexist must have been a nightmare but the movie is able to do it beautifully. We can tell immediately when
+            a character is in a different setting as the world around them changes and they become an obvious "fish out
+            of water". As Miles traverses through multiple dimensions we are told through just the visuals just how much
+            of an outsider he really is. This ability to tell the story through the visual style of the movie makes the
+            twist at the end all the more exciting as the viewer is able to <i>sense</i> something may be wrong but only
+            really understanding the issue as the main character realizes the problem himself.</p>
+    </main>
+    <br>
     <footer>
-        <a href="https://en.wikipedia.org/wiki/Spider-Man:_Across_the_Spider-Verse">Wikipedia page for Spider-Man: Across the Spider-Verse</a>
+        &copy; Maneet Sodhi<br>
+        <a href="https://www.youtube.com/watch?v=shW9i6k8cB0">Spider-Man:
+            Across the Spider-Verse official trailer</a>
     </footer>
 </body>
+
 </html>
